# SDL_Cmake_Simp

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
